--- a/webrtc/webrtc-cli/package.json
+++ b/webrtc/webrtc-cli/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "electron": "^7.1.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-native": "^0.61.5",
+    "react-native-webrtc": "^1.75.3",
+    "rtc-everywhere": "^0.0.5"
+  }
 }
