--- a/java/signal-vertx/pom.xml
+++ b/java/signal-vertx/pom.xml
@@ -7,6 +7,11 @@
     <groupId>me.rtmsoft.webrtc</groupId>
     <artifactId>signal-vertx</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+      </properties>
 
     <dependencies>
         <dependency>
