--- a/java/test/pom.xml
+++ b/java/test/pom.xml
@@ -151,6 +151,18 @@
             <artifactId>jooq-meta-extensions</artifactId>
             <version>3.14.3</version>
         </dependency>
+    
+      <dependency>
+        <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
+        <artifactId>concurrentlinkedhashmap-lru</artifactId>
+        <version>1.3.2</version>
+      </dependency>
+    
+      <dependency>
+        <groupId>org.openjdk.nashorn</groupId>
+        <artifactId>nashorn-core</artifactId>
+        <version>15.3</version>
+      </dependency>
     </dependencies>
 
     <build>
