--- a/go/grpc_demo/ares/resources/nginx/nginx.conf
+++ b/go/grpc_demo/ares/resources/nginx/nginx.conf
@@ -20,6 +20,7 @@ stream {
     server {
         listen 443;
         proxy_pass grpc_backends;
+        proxy_protocol on;
 
         access_log  logs/stream-access.log  stream_log;
         error_log   logs/stream-error.log   warn;
